deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacman-deploy
  name: pacman-deploy
  labels:
    app: pacmangit
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pacman-deploy
  template:
    metadata:
      labels:
        name: pacman-deploy
    spec:
      serviceAccount: pacman-sa
      containers:
      - image: docker.io/rfontain/pacman:v1
        imagePullPolicy: IfNotPresent
        name: pacman-container
        ports:
        - containerPort: 8080
