ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: pacman
  name: pacman-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: pacman-openlab.dev-adv.net
    http:
      paths:
      - path: /
        backend:
          serviceName: pacman-svc
          servicePort: 80
