route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacmangit
  namespace: pacmangit
spec:
  to:
    kind: Service
    name: pacmangit
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
